ISIS-1813: fixes CSS for action drop-down alignment

--- a/core/viewer-wicket-ui/src/main/java/org/apache/isis/viewer/wicket/ui/pages/bootstrap-overrides.css
+++ b/core/viewer-wicket-ui/src/main/java/org/apache/isis/viewer/wicket/ui/pages/bootstrap-overrides.css
@@ -581,6 +581,10 @@ div.label-left.actions-right .scalarValueWrapper {
     /*width: 3%;*/
 }
 
+.pull-right .additionalLinkListDropDown li.additionalLinkItem a.btn {
+    text-align: inherit;
+}
+
 
 div.label-top .scalarValueWrapper,
 div.label-none .scalarValueWrapper {
